# NorvesLib

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  LICENSE  NorvesLib.code-workspace  build_output2.txt  build_output3.txt  gen_shadow_header.py  refactoring_issue.md
.github/: copilot-instructions.md
Assets/AssetSets/: Rendering3DTestSilverGltfTextures.json  Rendering3DTestSilverTextures.json
Assets/Models/Rendering3DTestSilverGltf/: Rendering3DTestSilverGltf.gltf
Assets/Shaders/: blit.frag  bloom.frag  board2d.frag  board2d.vert  canvas_layer_opacity.frag  cluster_cull.comp  composite2d.frag  composite_alpha_over.frag  forward_transparent.frag  forward_transparent.vert  fullscreen.vert  fxaa.frag  gbuffer.frag  gbuffer.vert  hiz_generate.comp  impostor.frag  impostor.vert  lighting.frag  line.frag  line.vert  megageometry.frag  megageometry.vert  mesh2d.frag  mesh2d.vert  mesh3d.frag  mesh3d.vert  neural_material_decode.slang  shadow.frag  shadow.vert  ssao.frag  ssao_blur.frag  ssr.frag  tonemapping.frag  triangle.vert  upscale.frag  world_board.frag  world_board.vert
Docs/Architecture/: AssetCookWorkflow.md  AssetFallbackPolicy.md  ObjectModel.md  RenderResourceRefactor.md  RenderingFlow.md  RuntimeObjectResourceReflectionDesign.md
Docs/Baselines/RenderGraph/Phase0/2026-06-17/: Phase0Baseline.md
Docs/Baselines/RenderGraph/Phase0/2026-06-17/logs/: game_mt_log.txt  game_mt_run_summary.txt  game_st_log.txt  game_st_run_summary.txt
Docs/Baselines/RenderGraph/Phase0/2026-06-17/traces/: game_mt_trace.csv  game_st_trace.csv
Docs/Performance/: AssetLoadBaseline.md  AssetLoadPostCookComparison.md
Docs/Plans/: 2d-rendering-baseline.md  2d-rendering-subsystem-plan.md  debug-render-modes-baseline.md
Docs/Thread/: RingBuffer_Usage.md  ThreadLocalStorage_Usage.md
Examples/: DebugOutputDemo.cpp
Game/: Application.cpp  CMakeLists.txt  GameApplicationHandler.cpp  GameApplicationHandler.h
Game/Boot/: GameBoot.cpp  GameBoot.h  WinMain.cpp
Game/Bridge/: BridgeLogSink.cpp  BridgeLogSink.h  BridgeRuntimeState.h  BridgeServerHost.cpp  BridgeServerHost.h  NorvesLibBridgeAdapter.cpp  NorvesLibBridgeAdapter.h  ReadyHandshake.cpp  ReadyHandshake.h
Game/EntryPoint/: WinMain.cpp
Game/GameModes/: GameModeIds.h
Game/GameModes/MemoryAgingTest/: MemoryAgingTestData.h  MemoryAgingTestMode.h  MemoryAgingTestRoutine.cpp  MemoryAgingTestRoutine.h
Game/GameModes/Rendering3DTest/: DirectionalLightEditSubRoutine.cpp  DirectionalLightEditSubRoutine.h  Rendering3DTestData.h  Rendering3DTestDebugDraw.cpp  Rendering3DTestDebugDraw.h  Rendering3DTestDebugInput.cpp  Rendering3DTestDebugInput.h  Rendering3DTestMode.h  Rendering3DTestRoutine.cpp  Rendering3DTestRoutine.h
Game/Input/: PickingController.cpp  PickingController.h
Scripts/: CookTextureAssetSet.ps1  RunCookedTextureGameSmoke.ps1  SummarizeAssetLoadProfile.ps1
Test/: CMakeLists.txt
Test/Core/: CMakeLists.txt
Test/Core/Asset/: AssetBlobLifetimeTest.cpp  AssetFileReaderTest.cpp  AssetManifestTest.cpp  AssetPathTest.cpp  AssetSystemTest.cpp  CMakeLists.txt  CookedTextureTest.cpp  PackageFormatTest.cpp
Test/Core/Debug/: CMakeLists.txt  StatsManagerTest.cpp
Test/Core/GameMode/: CMakeLists.txt  GameModeRegistryTest.cpp  GameModeStateMachineTest.cpp  SubRoutineTest.cpp
Test/Core/Input/: CMakeLists.txt  InputRouterTest.cpp
Test/Core/Logging/: CMakeLists.txt  LoggerSinkTest.cpp
Test/Core/Math/: CMakeLists.txt  GeometryIntersectionExtraTest.cpp  MathGeometryTest.cpp  MatrixAbstractionTest.cpp
Test/Core/Module/: CMakeLists.txt  ModuleRegistryTest.cpp
Test/Core/Object/: Animal.cpp  Animal.h  CMakeLists.txt  EntitySubtreeSnapshotTest.cpp  EntityTreeTest.cpp  EntityWorldAABBTest.cpp  IncrementalGCTest.cpp  InvocationQueueTest.cpp  LegacyCleanupTest.cpp  LightComponentBuildProxyTest.cpp  ObjectCastTest.cpp  ObjectGCTest.cpp  ObjectHeapTest.cpp  ObjectReflectionTest.cpp  PrefabRoundTripTest.cpp  PropertyBagTest.cpp  ResourceMetadataTest.cpp  ResourceRegistryTest.cpp  RuntimeSchemaSnapshotTest.cpp  SceneQueryOverlapTest.cpp  SceneQueryRaycastTest.cpp  SchemaProjectionTest.cpp  SpringArmComponentTest.cpp  TransformHierarchyTest.cpp
Test/Core/Rendering/: BillboardComponentTest.cpp  BoardBlendModeTest.cpp  BoardComponentRoutingTest.cpp  BoardInstanceBatchingTest.cpp  BoardSortKeyStableTest.cpp  BoardTransformTest.cpp  CMakeLists.txt  CameraComponentProxyTest.cpp  CameraPickingTest.cpp  CameraTableTest.cpp  CameraViewConstantsTest.cpp  CanvasLayerCompositeSnapshotTest.cpp  CanvasViewRenderTest.cpp  ComponentDataBenchmark.cpp  ComponentDataRegistryTest.cpp  ComponentDirtyTrackingTest.cpp  CompositePassTest.cpp  CookedTextureUploadTest.cpp  DebugDrawQueueTest.cpp  DebugPostProcessPassThroughContractTest.cpp  DebugViewModeStringTest.cpp  DrawCommandSorterTest.cpp  FlipbookAdvanceTest.cpp  ForwardPassPipelinePlacementTest.cpp  ForwardPassWorldBoardRoutingTest.cpp  FramePacketManagerTest.cpp  ImpostorBakeServiceTest.cpp  ImpostorLODSwitchTest.cpp  ImpostorOctahedralTest.cpp  InstanceBufferRingTest.cpp  InstanceDataFlattenTest.cpp  LegacyViewPassAdapterTest.cpp  LightingParamsLayoutTest.cpp  MaterialResourcesTest.cpp  MegaGeometryFrameCommandDebugModeTest.cpp  MegaGeometryResourcesTest.cpp  MeshBatcherInstancingTest.cpp  MeshBatcherTest.cpp  MeshResourcesPrimitiveTest.cpp  MeshResourcesProceduralGpuTest.cpp  (+44 more)
Test/Core/Text/: CMakeLists.txt  IdentityLiteralTest.cpp
Test/Modules/Dummy/: CMakeLists.txt  DummyModuleLinkTest.cpp
Test/Reflection/: CMakeLists.txt  StructPropertySerializeTest.cpp
Test/Thread/: CMakeLists.txt  JobSystemShutdownTest.cpp  RingBufferTest.cpp  ThreadLocalStorageTest.cpp
Tools/: CMakeLists.txt
Tools/AssetCook/: AssetCookTextureSmoke.cmake.in  CMakeLists.txt  Main.cpp  TextureCooker.cpp  TextureCooker.h
